# open_retrieval

./: LICENSE.txt  README.txt  __init__.py  main.py  readme.md  requirements.txt  results.json  setup.cfg  setup.py
src/: __init__.py  data_loader.py  model.py
src/open_retrieval.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
