[metadata]
name = open-retrieval
version = 0.1
author = name of the author
author_email = Corran McCallum & Christoph Schuhmann
description = Retrieve semantically close text embeddings using a prebuilt FAISS index
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orgs/LAION-AI/Open-Retrieval
project_urls =
    Bug Tracker = https://github.com/orgs/LAION-AI/Open-Retrieval
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src